# devops

./: Dockerfile  README.md  creds.json
.github/workflows/: blank.yml  cdk.yml  docker.yml
RestApp.cdk.out/: manifest.json  tree.json
RestApp.cdk.out/assembly-Devops-RestApp/: DevopsRestAppexecuterunnerstack3E97D5F9.assets.json  DevopsRestAppexecuterunnerstack3E97D5F9.template.json  DevopsRestAppretainablestackC02340F2.assets.json  DevopsRestAppretainablestackC02340F2.template.json  manifest.json
cdk-app/: pyproject.toml
cdk-app/cdk_app/: app.py
cdk-app/cdk_app/stacks/: retainable_resources_stack.py  runner_stack.py  web_stack.py
cdk.out/: tree.json
cdk.out/assembly-Devops-RestApp/: DevopsRestAppexecuterunnerstack3E97D5F9.assets.json  DevopsRestAppexecuterunnerstack3E97D5F9.template.json  DevopsRestAppretainablestackC02340F2.assets.json  DevopsRestAppretainablestackC02340F2.template.json  manifest.json
docker/queue-docker/: Dockerfile  pyproject.toml
docker/queue-docker/src/queue_docker/: app.py
docker/rest-docker/: Dockerfile  pyproject.toml  requirements.txt
docker/rest-docker/src/rest_docker/: app.py
scripts/: build_cdk.py  build_docker.sh  pyproject.toml
